fix broken layouts

--- a/app/accounts/static/css/accounts/profile.css
+++ b/app/accounts/static/css/accounts/profile.css
@@ -31,7 +31,7 @@
 }
 
 #profileContainer {
-    height: 100%;
+    /* height: 100%; */
 }
 
 .card-header {
