--- a/app/pes_admin/static/css/pes_admin/admin_base.css
+++ b/app/pes_admin/static/css/pes_admin/admin_base.css
@@ -1,6 +1,9 @@
 body {
   font-family: "Nunito", sans-serif;
-  ;
+}
+
+main {
+  background-color: #9de2ff;
 }
 
 #admin {
@@ -22,23 +25,16 @@ body {
   color: #ffffff;
 }
 
-.card {
-  background-color: #a91917;
-  border-radius: 30px;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
-  color: #ffffff;
-}
-
 
 .btn-primary:hover {
   background-color: var(--bg-primary);
 }
 
-.jumbotron-alert {
-  background-color: #a91917;
-  border-radius: 30px;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
-  color: #ffffff;
+ul#menu > li:hover {
+ border: 2px solid #9de2ff;
+ border-radius: 5px;
+ transition: all .4s ease-in-out;
+ transform: scale(1.2); 
 }
 
 /* admin dash */
@@ -74,15 +70,10 @@ a:hover {
 }
 
 .jumbotron-admin {
-  background-color: a6c2d0;
+  background-color: #a6c2d0;
   /* color: #fff; */
 }
 
-.card-admin {
-  background-color: #4b6386;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
-  color: #ffffff;
-}
 
 .border-left {
   border-left: 2px solid var(--primary) !important;
@@ -105,12 +96,6 @@ a:hover {
 }
 
 
-.sidebar {
-  left: 0;
-  z-index: 100;
-  overflow-y: auto;
-}
-
 .overlay {
   background-color: rgb(0 0 0 / 45%);
   z-index: 99;
@@ -119,21 +104,6 @@ a:hover {
 .country-applications {
   border-radius: 5px;
   font-weight: 700;
-}
-
-/* sidebar for small screens */
-@media screen and (max-width: 767px) {
-
-  .sidebar {
-    max-width: 18rem;
-    transform: translateX(-100%);
-    transition: transform 0.4s ease-out;
-  }
-
-  .sidebar.active {
-    transform: translateX(0);
-  }
-
 }
 
 
